<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quite_while"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:src="@drawable/ic_keyboard_backspace_black_24dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            android:paddingEnd="67dp"
            android:text="Forgot Password"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/guide_forgot_password"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edi_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginRight="30dp"
        app:errorEnabled="true"
        app:hintEnabled="false">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/rounded_corner_without_border_dark"
            android:drawableStart="@drawable/round_mail_outline_24"
            android:drawablePadding="5dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_login"
        android:text="@string/btn_send"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>