<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/quite_while"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:shadowColor="@color/colorPrimary"
            android:text="Chat together"
            android:textColor="#000"
            android:textColorHighlight="@color/colorAccent"
            android:textSize="20dp"
            android:textStyle="italic" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:drawableStart="@drawable/round_person_24"
                android:drawablePadding="5dp"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="1dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_birthday"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:drawableStart="@drawable/round_person_24"
                android:drawablePadding="5dp"
                android:hint="@string/hint_birthday"
                android:inputType="date"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="1dp"
            app:errorEnabled="true"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:drawableStart="@drawable/round_mail_outline_24"
                android:drawablePadding="5dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="1dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:drawableStart="@drawable/round_lock_24"
                android:drawablePadding="5dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edi_retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="1dp"
            app:errorEnabled="true"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_retype_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/rounded_corner_without_border_dark"
                android:drawableStart="@drawable/round_lock_24"
                android:drawablePadding="5dp"
                android:hint="@string/hint_retype_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chb_terms_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txt_terms_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/terms_privacy"
                android:textSize="16sp" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_login"
            android:padding="12dp"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/link_to_signin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="Already have an account? Sign In"
            android:textSize="18dp" />

    </LinearLayout>
</ScrollView>